--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -16,6 +16,12 @@ bind C-a send-prefix
 bind | split-window -h
 bind - split-window -v
 
+#switch panels
+bind k selectp -U # switch to panel Up
+bind j selectp -D # switch to panel Down 
+bind h selectp -L # switch to panel Left
+bind l selectp -R # switch to panel Right
+
 # Resize panes using arrow keys
 bind -n C-Left resize-pane -L 5
 bind -n C-Right resize-pane -R 5
