feat: improved alacritty and tmux configuration

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -54,7 +54,7 @@ set -g message-style bg="#313244",fg="#f5c2e7"  # Message background and foregro
 
 # Status bar left and right
 set -g status-left "#[fg=#fab387,bg=#1e1e2e,bold] #S #[fg=#1e1e2e,bg=#fab387,nobold,nounderscore,noitalics]"
-set -g status-right "#[fg=#fab387,bg=#1e1e2e,nobold,nounderscore,noitalics]#[fg=#1e1e2e,bg=#fab387,bold] #H "
+set -g status-right "#[fg=#fab387,nobold,nounderscore,noitalics]#[fg=#1e1e2e,bg=#fab387,bold] #H "
 
 # Window title colors
 # setw -g window-status-style bg=#1e1e2e,fg=#bac2de
@@ -76,4 +76,3 @@ setw -g mode-style bg="#313244",fg="#f5c2e7"
 
 # Resurrect
 set -g @plugin 'tmux-plugins/tmux-resurrect'
-
