fix: improved vim navigability on tmux

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,78 +1,84 @@
-# Enable mouse support (works in most terminals)
+# set-option -sa terminal-overrides ",xterm*:Tc"
 set -g mouse on
-set -g base-index 1
 
-# Use vim keybindings in copy mode
-setw -g mode-keys vi
-bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
-bind P paste-buffer
-bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy"
-
-# Set prefix key to Ctrl-a (default is Ctrl-b)
-set -g prefix C-a
 unbind C-b
+set -g prefix C-a
 bind C-a send-prefix
 
-# Split panes using | and -
+# Vim style pane selection
+bind h select-pane -L
+bind j select-pane -D 
+bind k select-pane -U
+bind l select-pane -R
+
+# Start windows and panes at 1, not 0
+set -g base-index 1
+set -g pane-base-index 1
+set-window-option -g pane-base-index 1
+set-option -g renumber-windows on
+
+# Use Alt-arrow keys without prefix key to switch panes
+bind -n M-Left select-pane -L
+bind -n M-Right select-pane -R
+bind -n M-Up select-pane -U
+bind -n M-Down select-pane -D
+
+# Use Control-arrow keys without prefix key to resize panes
+bind -n C-Up resize-pane -U 5
+bind -n C-Down resize-pane -D 5
+bind -n C-Left resize-pane -L 5
+bind -n C-Right resize-pane -R 5
+
+# Shift arrow to switch windows
+bind -n S-Left  previous-window
+bind -n S-Right next-window
+
+# Shift Alt vim keys to switch windows
+bind -n M-H previous-window
+bind -n M-L next-window
+
+set -g @catppuccin_flavour 'mocha'
+
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'tmux-plugins/tmux-yank'
+
+# set vi-mode
+set-window-option -g mode-keys vi
+# keybindings
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
+bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
+
 bind | split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
 
-#switch panels
-bind k selectp -U # switch to panel Up
-bind j selectp -D # switch to panel Down 
-bind h selectp -L # switch to panel Left
-bind l selectp -R # switch to panel Right
+setw -g monitor-activity on
+setw -g automatic-rename on
 
-# Resize panes using arrow keys
-bind -n C-Left resize-pane -L 5
-bind -n C-Right resize-pane -R 5
-bind -n C-Up resize-pane -U 5
-bind -n C-Down resize-pane -D 5
+# Style
+set-option -g status-position top
 
-# Enable 256 colors
-set -g default-terminal "screen-256color"
+set -g status-fg "#cdd6f4"  # Status bar foreground
+set -g message-style bg="#313244",fg="#f5c2e7"  # Message background and foreground
 
-# Status bar customization
-# set -g status-bg black
 set -g status-fg white
 set -g status-left-length 20
 set -g status-right-length 140
 set -g status-left "#[fg=green](#S)"
 set -g status-right "#[fg=yellow]#H #[fg=cyan]%Y-%m-%d %H:%M"
 
-# Window title colors
-setw -g window-status-current-format " #I:#W "
-
-# Enable window and pane indicators
-setw -g monitor-activity on
-setw -g automatic-rename on
-
-# Catppuccin theme colors
-# set -g status-bg "#1e1e2e"  # Status bar background
-set -g status-fg "#cdd6f4"  # Status bar foreground
-set -g message-style bg="#313244",fg="#f5c2e7"  # Message background and foreground
-
-# Status bar left and right
 set -g status-left "#[fg=#fab387,bg=#1e1e2e,bold] #S #[fg=#1e1e2e,bg=#fab387,nobold,nounderscore,noitalics]"
-set -g status-right "#[fg=#fab387,nobold,nounderscore,noitalics]#[fg=#1e1e2e,bg=#fab387,bold] #H "
+set -g status-right "#[fg=#fab387,bg=#1e1e2e,nobold,nounderscore,noitalics]#[fg=#1e1e2e,bg=#fab387,bold] #H "
 
-# Window title colors
-# setw -g window-status-style bg=#1e1e2e,fg=#bac2de
 set -g status-style bg=default
 setw -g window-status-current-style bg=#fab387,fg=#1e1e2e,bold
 setw -g window-status-format " #I:#W "
 setw -g window-status-current-format " #I:#W "
-set-option -g status-position top
 
-# Pane border colors
 set -g pane-border-style fg="#585b70"
 set -g pane-active-border-style fg="#fab387"
-
-# Command prompt colors
 set -g message-command-style bg="#313244",fg="#f5c2e7"
-
-# Mode indicator colors
 setw -g mode-style bg="#313244",fg="#f5c2e7"
 
-# Resurrect
-set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g default-terminal "screen-256color"
