--- a/waybar/config
+++ b/waybar/config
@@ -1,15 +1,18 @@
 {
     "layer": "top",
-    "position": "bottom",
+    "position": "top",
     "height": 35,
     "spacing": 4,
     "margin-top": 10,
-    "margin-bottom":5,
+	"margin-left": 15,
+	"margin-right": 15,
+    "margin-bottom": 0,
 
     // Choose the order of the modules
-    "modules-left":["custom/launcher", "wlr/taskbar"],
-    "modules-center":["sway/workspaces"],
-    "modules-right":["custom/media", "cpu", "memory", "pulseaudio",  "battery", "clock"],
+    // "modules-left":["custom/launcher", "wlr/taskbar"],
+    // "modules-center":["hyprland/workspaces"],
+    "modules-left":["hyprland/workspaces"],
+    "modules-right":["custom/media", "cpu", "memory", "pulseaudio", "battery", "clock"],
     // Modules configuration
 
     "wlr/taskbar": {
@@ -21,7 +24,7 @@
         "on-click-middle": "close",
         "on-click-right": "activate"
     },
-    "sway/workspaces": {
+    "hyprland/workspaces": {
         "all-outputs": false,
         "disable-scroll": true,
         "format": "{icon} {name}",
@@ -32,7 +35,7 @@
             "4:terminals": "", // Icon: terminal
             "5:portal": "", // Icon: terminal
             "urgent": "",
-            "focused": "",
+            "active": "",
             "default": ""
         }
     },
@@ -55,7 +58,7 @@
             "critical": 15
         },
         "format": "{capacity}% {icon}",
-        "format-charging": "{capacity}% ",
+        "format-charging": "{capacity}% ",
         "format-plugged": "{capacity}% ",
         "format-alt": "{time} {icon}",
         // "format-good": "", // An empty format will hide the module
@@ -94,8 +97,27 @@
         "on-click": "playerctl play-pause"
     },
     "custom/launcher":{
-        "format": "",
-        "on-click": "rofi -show drun",
-        "on-click-right": "killall rofi"
-    }
+        "format": "&#xf135;",
+        "on-click": "rofi -show drun"
+    },
+	"custom/notification": {
+		"tooltip": false,
+		"format": "{icon}",
+		"format-icons": {
+			"notification": "<span foreground='red'><sup></sup></span>",
+			"none": "",
+			"dnd-notification": "<span foreground='red'><sup></sup></span>",
+			"dnd-none": "",
+			"inhibited-notification": "<span foreground='red'><sup></sup></span>",
+			"inhibited-none": "",
+			"dnd-inhibited-notification": "<span foreground='red'><sup></sup></span>",
+			"dnd-inhibited-none": ""
+		},
+		"return-type": "json",
+		"exec-if": "which swaync-client",
+		"exec": "swaync-client -swb",
+		"on-click": "swaync-client -t -sw",
+		"on-click-right": "swaync-client -d -sw",
+		"escape": true
+	},
 }
