fix: updated hyprland config

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -4,9 +4,8 @@
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
 
-monitor = HDMI-A-1, 2560x1080@60, 0x0, 1
-# 2560 needs to be devided by 2 to compensate scale
-monitor = eDP-1, 1920x1200@60, -1280x0, 1
+monitor=eDP-1,2880x1800@90,-1440x0,2
+monitor=HDMI-A-1,2560x1080@144,0x0,1
 
 ################
 ### PROGRAMS ###
@@ -22,7 +21,7 @@ $menu = rofi -show drun
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 
-exec-once = waybar
+exec-once = waybar & hyprpaper
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -64,8 +63,8 @@ decoration {
     rounding = 5
 
     # Change transparency of focused and unfocused windows
-    active_opacity = 0.95
-    inactive_opacity = 0.95
+    active_opacity = 1
+    inactive_opacity = 1
 
     shadow {
         enabled = true
@@ -128,7 +127,6 @@ misc {
     force_default_wallpaper = 0 # Set to 0 or 1 to disable the anime mascot wallpapers
     disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
 }
-
 
 #############
 ### INPUT ###
