fix: updated theme and removed unused config

--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,4 +1,4 @@
-preload = ~/Pictures/fedora-wall.jpg
-wallpaper = eDP-1,~/Pictures/fedora-wall.jpg
-wallpaper = HDMI-A-1,~/Pictures/fedora-wall.jpg
+preload = ~/Pictures/1-nord.png
+wallpaper = eDP-1,~/Pictures/1-nord.png
+wallpaper = HDMI-A-1,~/Pictures/1-nord.png
 ipc = off
