--- a/kitty/current-theme.conf
+++ b/kitty/current-theme.conf
@@ -9,7 +9,7 @@
 
 
 # The basic colors
-foreground              #CDD6F4
+foreground              #D8DEE9
 background              #141415
 selection_foreground    #1E1E2E
 selection_background    #F5E0DC
