--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -68,16 +68,16 @@ set -g status-right-length 140
 set -g status-left "#[fg=green](#S)"
 set -g status-right "#[fg=yellow]#H #[fg=cyan]%Y-%m-%d %H:%M"
 
-set -g status-left "#[fg=#fab387,bg=#1e1e2e,bold] #S #[fg=#1e1e2e,bg=#fab387,nobold,nounderscore,noitalics]"
-set -g status-right "#[fg=#fab387,bg=#1e1e2e,nobold,nounderscore,noitalics]#[fg=#1e1e2e,bg=#fab387,bold] #H "
+set -g status-left "#[fg=#d8dee9,bg=#1e1e2e,bold] #S #[fg=#1e1e2e,bg=#d8dee9,nobold,nounderscore,noitalics]"
+set -g status-right "#[fg=#d8dee9,bg=#1e1e2e,nobold,nounderscore,noitalics]#[fg=#1e1e2e,bg=#d8dee9,bold] #H "
 
 set -g status-style bg=default
-setw -g window-status-current-style bg=#fab387,fg=#1e1e2e,bold
+setw -g window-status-current-style bg=#d8dee9,fg=#1e1e2e,bold
 setw -g window-status-format " #I:#W "
 setw -g window-status-current-format " #I:#W "
 
 set -g pane-border-style fg="#585b70"
-set -g pane-active-border-style fg="#fab387"
+set -g pane-active-border-style fg="#d8dee9"
 set -g message-command-style bg="#313244",fg="#f5c2e7"
 setw -g mode-style bg="#313244",fg="#f5c2e7"
 
