--- a/kitty/current-theme.conf
+++ b/kitty/current-theme.conf
@@ -10,7 +10,7 @@
 
 # The basic colors
 foreground              #D8DEE9
-background              #141415
+background              #2E3440
 selection_foreground    #1E1E2E
 selection_background    #F5E0DC
 
