feat: polished hyprlock design
Inspired by catppuccin

--- a/hypr/hyprlock.conf
+++ b/hypr/hyprlock.conf
@@ -4,38 +4,39 @@ $outer_color = rgba(216,222,233,1.0)
 $font_color = rgba(216,222,233,1.0)
 $check_color = rgba(136, 192, 208, 1.0)
 
+$font = JetBrainsMono Nerd Font
+
+general {
+  hide_cursor = true
+}
+
 background {
     monitor =
     color = $color
+    path = $HOME/Pictures/1-nord.png
 }
 
 animations {
-    enabled = false
+    enabled = true
 }
 
 input-field {
-    monitor =
-    size = 600, 100
-    position = 0, 0
-    halign = center
-    valign = center
-
-    inner_color = $inner_color
-    outer_color = $outer_color
-    outline_thickness = 4
-
-    font_family = CaskaydiaMono Nerd Font
-    font_color = $font_color
-
-    placeholder_text =   Enter Password 󰈷 
-    check_color = $check_color
-    fail_text = <i>$PAMFAIL ($ATTEMPTS)</i>
-
-    rounding = 0
-    shadow_passes = 0
-    fade_on_empty = false
-}
-
-auth {
-    fingerprint:enabled = true
+  monitor =
+  size = 300, 60
+  outline_thickness = 4
+  dots_size = 0.2
+  dots_spacing = 0.2
+  dots_center = true
+  outer_color = $outer_color
+  inner_color = $inner_color
+  font_color = $font_color
+  fade_on_empty = false
+  placeholder_text = Enter Password
+  hide_input = false
+  check_color = $check_color
+  fail_color = $color
+  fail_text = <i>$FAIL <b>($ATTEMPTS)</b></i>
+  position = 0, -47
+  halign = center
+  valign = center
 }
