feat: updated whole configuration

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -9,7 +9,7 @@ bold_italic_font auto
 font_size 14
 disable_ligatures never
 
-# background_opacity 0.90
+background_opacity 0.95
 
 cursor_shape beam
 hide_window_decorations yes
