--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -66,10 +66,10 @@ set -g status-fg white
 set -g status-left-length 20
 set -g status-right-length 140
 set -g status-left "#[fg=green](#S)"
-set -g status-right "#[fg=yellow]#H #[fg=cyan]%Y-%m-%d %H:%M"
+set -g status-right ""
 
 set -g status-left "#[fg=#d8dee9,bg=#1e1e2e,bold] #S #[fg=#1e1e2e,bg=#d8dee9,nobold,nounderscore,noitalics]"
-set -g status-right "#[fg=#d8dee9,bg=#2e3440,nobold,nounderscore,noitalics]#[fg=#1e1e2e,bg=#d8dee9,bold] #H "
+set -g status-right ""
 
 set -g status-style bg=default
 setw -g window-status-current-style bg=#d8dee9,fg=#1e1e2e,bold
