--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -63,8 +63,8 @@ decoration {
     rounding = 5
 
     # Change transparency of focused and unfocused windows
-    active_opacity = 1
-    inactive_opacity = 1
+    active_opacity = 0.98
+    inactive_opacity = 0.98
 
     shadow {
         enabled = true
@@ -152,11 +152,6 @@ input {
     }
 }
 
-# https://wiki.hyprland.org/Configuring/Variables/#gestures
-gestures {
-    workspace_swipe = false
-}
-
 ###################
 ### KEYBINDINGS ###
 ###################
@@ -209,6 +204,8 @@ bind = $mainMod SHIFT, 0, movetoworkspace, 10
 # Example special workspace (scratchpad)
 bind = $mainMod, S, togglespecialworkspace, magic
 bind = $mainMod SHIFT, S, movetoworkspace, special:magic
+
+bind = $mainMod, G, exec, hyprctl dispatch resizeactive exact 1400 950; hyprctl dispatch centerwindow
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
