--- a/kitty/current-theme.conf
+++ b/kitty/current-theme.conf
@@ -6,11 +6,9 @@
 ## upstream: https://github.com/catppuccin/kitty/blob/main/mocha.conf
 ## blurb:    Soothing pastel theme for the high-spirited!
 
-
-
 # The basic colors
 foreground              #D8DEE9
-background              #2E3440
+background              #000000
 selection_foreground    #1E1E2E
 selection_background    #F5E0DC
 
