feat: improved waybar aestethic and added on-click function to trigger new-window on tmux

--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -8,13 +8,11 @@
     "hyprland/workspaces"
   ],
   "modules-center": [
-    "clock",
-    "custom/update"
+    "clock"
   ],
   "modules-right": [
     "network",
     "pulseaudio",
-    "cpu",
     "battery"
   ],
   "hyprland/workspaces": {
@@ -37,59 +35,41 @@
       "1": []
     }
   },
-  "cpu": {
-    "interval": 5,
-    "format": "󰍛",
-    "on-click": "kitty -e btop"
-  },
   "clock": {
     "format": "{:%A %H:%M}",
     "format-alt": "{:%d %B %Y}",
     "tooltip": false
   },
   "network": {
-    "format-icons": ["󰤯","󰤟","󰤢","󰤥","󰤨"],
-    "format" : "{icon}",
-    "format-wifi" : "{icon}",
-    "format-ethernet" : "󰀂",
-    "format-disconnected" : "󰖪",
-    "tooltip-format-wifi": "{essid} ({frequency} GHz)\n⇣{bandwidthDownBytes}  ⇡{bandwidthUpBytes}",
-    "tooltip-format-ethernet": "⇣{bandwidthDownBytes}  ⇡{bandwidthUpBytes}",
-    "tooltip-format-disconnected": "Disconnected",
-    "interval": 3,
-    "nospacing": 1,
-    "on-click": "kitty --class=Impala -e impala"
+    "format-wifi": "  {signalStrength}% ·",
+    "format-ethernet": "wired",
+    "format-disconnected": "offline",
+    "interval": 5,
+    "tooltip-format-wifi": "⇣{bandwidthDownBytes} ⇡{bandwidthUpBytes}",
+    "on-click": "tmux new-window 'nmcli dev wifi; read -n 1'"
   },
   "battery": {
-    "format": "{capacity}% {icon}",
-    "format-discharging": "{icon}",
-    "format-charging":    "{icon}",
-    "format-plugged":     "",
-    "format-icons": {
-      "charging": [
-        "󰢜", "󰂆", "󰂇", "󰂈", "󰢝", "󰂉", "󰢞", "󰂊", "󰂋", "󰂅"
-      ],
-      "default": [
-        "󰁺", "󰁻", "󰁼", "󰁽", "󰁾", "󰁿", "󰂀", "󰂁", "󰂂", "󰁹"
-      ]
-    },
-    "format-full": "󰂅",
-    "tooltip-format-discharging": "{power:>1.0f}W↓ {capacity}%",
-    "tooltip-format-charging": "{power:>1.0f}W↑ {capacity}%",
+    "format": "{capacity}%",
+    "format-charging": "󰂄 {capacity}%",
+    "format-discharging": "󰂄⇣ {capacity}%",
+    "format-plugged": "󰂄⇡ {capacity}%",
+    "format-warning": "⚠ {capacity}%",
+    "format-critical": "🔴 {capacity}%",
+    "tooltip-format-discharging": "{power:>1.0f}W ⇣  {capacity}%",
+    "tooltip-format-charging": "{power:>1.0f}W ⇡  {capacity}%",
     "interval": 5,
     "states": {
       "warning": 20,
       "critical": 10
-    }
+    },
+    "on-click": "tmux new-window 'btop'"
   },
   "pulseaudio": {
-    "format": "{icon}",
-    "on-click": "pavucontrol",
-    "tooltip-format": "Playing at {volume}%",
+    "format": "  {volume}% ·",
+    "format-muted": "󰝟  muted ·",
     "scroll-step": 1,
-    "format-muted": "󰝟",
-    "format-icons": {
-      "default": ["", "", ""]
-    }
+    "on-click": "pavucontrol",
+    "tooltip-format": "Volume: {volume}%",
+    "on-click": "tmux new-window 'wiremix' \\; send-keys Tab Tab"
   }
 }
